test_suite/tests/ui/fail/invalid_attr_value_for_option/invalid_option_error.stderr
error: custom attribute panicked
 --> $DIR/invalid_option_error.rs:3:1
  |
3 | #[command]
  | ^^^^^^^^^^
  |
  = help: message: option `error` must be a string literal
